	* make files deleted alert non-discardable
	* make built-in sha functions not conflict with libcrypto
	* improve web seed hash failure case
	* improve DHT lookup times
	* uTP path MTU discovery improvements
	* optimized the torrent creator optimizer to scale significantly better with more files
	* fix uTP edge case where udp socket buffer fills up
	* fix nagle implementation in uTP

	* don't use pool allocator for disk blocks (cache may now return pages to the kernel)

0.16.9 release

	* fix long filename truncation on windows
	* distinguish file open mode when checking files and downloading/seeding with bittorrent. updates storage interface
	* improve file_storage::map_file when dealing with invalid input
	* improve handling of invalid utf-8 sequences in strings in torrent files
	* handle more cases of broken .torrent files
	* fix bug filename collision resolver
	* fix bug in filename utf-8 verification
	* make need_save_resume() a bit more robust
	* fixed sparse flag manipulation on windows
	* fixed streaming piece picking issue

0.16.8 release

	* make rename_file create missing directories for new filename
	* added missing python function: parse_magnet_uri
	* fix alerts.all_categories in python binding
	* fix torrent-abort issue which would cancel name lookups of other torrents
	* make torrent file parser reject invalid path elements earlier
	* fixed piece picker bug when using pad-files
	* fix read-piece response for cancelled deadline-pieces
	* fixed file priority vector-overrun
	* fix potential packet allocation alignment issue in utp
	* make 'close_redudnant_connections' cover more cases
	* set_piece_deadline() also unfilters the piece (if its priority is 0)
	* add work-around for bug in windows vista and earlier in GetOverlappedResult
	* fix traversal algorithm leak in DHT
	* fix string encoding conversions on windows
	* take torrent_handle::query_pieces into account in torrent_handle::statue()
	* honor trackers responding with 410